--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,10 @@
   ],
   "require": {
     "php": ">=7.3",
-    "illuminate/support": "^8.0",
-    "illuminate/config": "^8.0",
-    "illuminate/view": "^8.0",
-    "laravelcollective/html": "6.2.*"
+    "illuminate/support": "*",
+    "illuminate/config": "*",
+    "illuminate/view": "*",
+    "laravelcollective/html": "*"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5",
