--- a/composer.json
+++ b/composer.json
@@ -20,17 +20,17 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
+    "php": ">=8.1",
     "illuminate/support": "*",
     "illuminate/config": "*",
     "illuminate/view": "*",
     "laravelcollective/html": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5",
-    "mockery/mockery": "~1.0",
-    "orchestra/testbench": "^6.2",
-    "friendsofphp/php-cs-fixer": "^2.16"
+    "phpunit/phpunit": "*",
+    "mockery/mockery": "*",
+    "orchestra/testbench": "*",
+    "friendsofphp/php-cs-fixer": "*"
   },
   "autoload": {
     "psr-4": {
